# Innovation-Catalogue-Azure

./: .gitignore  .replit  AZURE_BLOB_STORAGE_SETUP.md  AZURE_SSO_SETUP.md  FINAL_TEST_SUMMARY.md  Mappe1.xlsx  README.md  ai_trend_analyzer.py  api_clients.py  api_routes.py  app.py  auth_config.py  comprehensive_test_report.md  config.py  create_test_excel.py  deep_research_worker.py  document_processor.py  excel_batch_processor.py  explore_features.py  functional_test.py  gunicorn.conf.py  improvement_suggestions.md  init_sample_data.py  migrate_categories.py  migrate_images_to_blob.py  migrate_nutriscore.py  models.py  nutriscore_mapper.py  pyproject.toml  replit.md  requirements.txt  routes.py  routes_groups.py  routes_sharing.py  run_tests.py  security_recommendations.md  security_test.py  test_claim_calculator.py  test_recipe.txt  translations.py  (+4 more)
attached_assets/: 000004010804_MSR_muesli bar whole milk chocolate, peanut_FTS_Aldi_EN_W_23.06.2025kg_1756907901277.pptx  Pasted--market-research-reports-description-Analyse-von-aggregierten-Marktdaten-Wachstum-1759848179905_1759848179905.txt  Pasted-Anweisung-f-r-den-Replit-Entwickler-Implementierung-eines-KI-gest-tzten-Deep-Research-Tools-f-r-F-1759840839787_1759840839788.txt  Pasted-Anweisung-zur-Implementierung-eines-integrierten-Trend-Report-Features-1-Rolle-und-Ziel-Du-bist-ein-1759760614963_1759760614963.txt  Pasted-Auf-unserer-Product-Paper-Seite-gibt-es-Claims-darunter-den-Claim-Typ-exclusive-Im-Overview-ersc-1759917428705_1759917428706.txt  Qlik Sense - Ohne Titel - 14. Oktober 2025_1760525666541.xlsx  (+53 more)
(+49 files in other folders)
